src/rules/snapshots/pg_migration_lint__rules__pgm025__tests__unnamed_exclude_shows_element_list.snap
---
source: src/rules/pgm025.rs
expression: findings
---
- rule_id: PGM025
  severity: Minor
  message: "Dropping column 'during' from table 'bookings' silently removes EXCLUDE constraint EXCLUDE(room, during). Verify that the exclusion guarantee is no longer needed."
  file: migrations/002.sql
  start_line: 1
  end_line: 1
